# fastsaas

./: cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
singlepane_api/: .env.example  container.py  main.py
singlepane_api/config/: settings.py
singlepane_api/modules/okr/: routes.py
singlepane_api/providers/: settings_provider.py  supabase_provider.py
{{cookiecutter.module_name}}/: .gitignore  main.py  pyproject.toml  tasks.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/: container.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/_module_template/: api_routes.py  web_routes.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/config/: settings.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/modules/: __init__.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/modules/demo/: api_routes.py  web_routes.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/providers/: settings_provider.py  supabase_provider.py
