[tool.poetry]
name = "{{ cookiecutter.module_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI-Test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all/"], version = "^0.101.0" }
supabase-py = "^0.0.2"
ruff = "^0.0.284"
uvicorn = "^0.23.2"
lagom = "^2.4.1"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.2"
typer = { extras = ["all"], version = "^0.9.0" }
pip = "^23.2.1"
install = "^1.3.5"
rich = { extras = ["jupyter"], version = "^13.5.2" }
shellingham = "^1.5.3"
fastsaas-cli = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
black = "^23.7.0"

[tool.ruff]
line-length = 140
ignore = ["C"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
